--- a/es/hechoparagoogle.html
+++ b/es/hechoparagoogle.html
@@ -111,7 +111,7 @@
       </div>
       <div class="col-md-7 madeforgoogle_banner_R ml-auto">
         <div class="madeforgoogle_banner_box">
-          <h2>#1 Gestión de Proyectos Google</h2>
+          <h2>Gestión de Proyectos Google #1</h2>
          <p>Con un solo clic puedes convertir G Suite en una única herramienta de colaboración. Crea documentos de Google, eventos de calendario, agrega contactos e integra Gmail, todo sin conocimientos técnicos.</p>
         </div>
          <div class="joinworkep_btns">
@@ -145,7 +145,7 @@
     <div class="missing_half_gsuit_bot">
       <div class="missing_half_gsuit_im">
         <img src="../images/gsuit_missing_hlf_im.png" alt="">
-        <a href="#url" class="signupgoogle"><span>REGÍSTRATE EN GOOGLE</span></a>
+        <a href="#url" class="signupgoogle"><span>REGÍSTRATE CON GOOGLE</span></a>
       </div>
       <div class="missing_half_gsuit_ic1 wow swing" data-wow-delay="1s" data-wow-duration="2s">
         <img src="../images/sinup_ic1.png" alt="">
@@ -202,11 +202,11 @@
                 <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"><span class="addon_progress_bar">
                   <span></span>
                 </span>
-                <p>Dentro de tu email</p></li>
+                <p>Abre el add-on de Workep en tu cuenta de Gmail</p></li>
                 <li data-target="#carouselExampleIndicators" data-slide-to="1"><span class="addon_progress_bar">
                   <span></span>
                 </span>
-                <p>Envía tareas directamente desde Gmail</p></li>
+                <p>Envía tareas directamente a tus proyectos en Workep</p></li>
                 <li data-target="#carouselExampleIndicators" data-slide-to="2"><span class="addon_progress_bar">
                   <span></span>
                 </span>
@@ -246,11 +246,11 @@
 <div class="google_quick_access common_gap">
     <div class="container">
        <div class="section_title">
-          <h2>Google Drive <br>Quick access and centralization</h2>
+          <h2>Google Drive <br>Acceso rápido y centralización</h2>
           <div class="addon_img wow bounceInUp" data-wow-delay="0.3s" data-wow-duration="1s">
             <img src="../images/google_drive_ic.png" alt="">
           </div>
-          <p>Create Google Docs directly from your tasks in Workep. Add Drive documents to your <br> tasks. Easily find the documents you need for a specific task without wasting time.</p>
+          <p>Crea Google Docs directamente desde tus tareas en Workep. Adjunta documentos de Drive a tus tareas. Encuentra los documentos que necesitas para una tarea específica, fácilmente, sin perder tiempo.</p>
         </div>
 
         <div class="google_drive_tab" id="horizontalTab">
@@ -260,7 +260,7 @@
 
                   <div class="google_drive_tab_title">
                   <h4>Google Drive</h4>
-                  <p>Workep and Google Drive work like twins. Everything is synced. </p>
+                  <p>Workep y Google Drive funcionan como hermanos. Todo está sincronizado. </p>
                 </div>
 
               </li>
@@ -268,7 +268,7 @@
 
                   <div class="google_drive_tab_title">
                     <h4>Team Drive</h4>
-                    <p>Access any team files easily, a single click away :) </p>
+                    <p>Accede a cualquier archivo de equipo fácilmente, con un solo clic :) </p>
                   </div>
 
               </li>
@@ -298,20 +298,20 @@
 <div class="google_quick_access common_gap">
     <div class="container">
        <div class="section_title">
-          <h2>Google Calendar <br>Integration and automation</h2>
+          <h2>Google Calendar <br>Integración y automatización</h2>
           <div class="addon_img wow bounceInUp" data-wow-delay="0.3s" data-wow-duration="1s">
             <img src="../images/google_calender.png" alt="">
           </div>
-          <p>Easily sync your task due dates with the calendar you are already using. <br>Every project has its own Google Calendar, so you can better manage your time.</p>
+          <p>Sincroniza fácilmente las fechas de vencimiento de tus tareas con el calendario que ya estás utilizando.<br>Cada proyecto tiene su propio Calendario de Google, para que manejes mejor tu tiempo.</p>
         </div>
 
         <div class="google_quick_project">
 
             <div class="row">
               <div class="col-lg-7 google_quick_project_L">
-                  <h2># Projects</h2>
+                  <h2># Proyectos</h2>
                   <div class="google_quick_project_con">
-                    <p>The value of the synchronization is to have access at a glance,  and the value of the flexibility is to see only your events   or your team’s events.</p>
+                    <p>Sincronización: todo en un solo vistazo.</br>Flexibilidad: ver solo tus eventos, o los de todo tu equipo.</p>
                   </div>
                   <div class="google_quick_slider google_quick_slider_nav">
                       <a class="google_quick_slide" href="#url">
@@ -377,8 +377,8 @@
   <div class="hangout_chat common_gap">
     <div class="container">
        <div class="section_title">
-          <h2>Hangouts and Google Chat <br>Effective communication</h2>
-          <p>Real-time communication is important. <br>Start a Hangouts meeting or a Chat window with your teammates directly from Workep.</p>
+          <h2>Hangouts y Google Chat <br>Comunicación efectiva</h2>
+          <p>La comunicación en tiempo real es fundamental. <br>Empieza una reunión en Hangouts o una ventana de Google Chat directamente desde Workep.</p>
         </div>
         <div class="hangout_chat_bot">
           <div class="row">
@@ -397,24 +397,24 @@
               </div>
 
               <div class="bot_card wow fadeInUp" data-wow-delay="0.5s" data-wow-duration="1s">
-                <a href="#url" class="followbtn">Follow</a>
+                <a href="#url" class="followbtn">Seguir</a>
                 <div class="bot_card_in">
                   <h3 class="bot_card_title">Workep Bot</h3>
-                  <p class="bot_card_sender"><span>Eduardo Alvarez</span> has <b class="bot_card_comment">completed</b> the task:</p>
-                  <p class="bot_card_comment">Send the new design to the client</p>
+                  <p class="bot_card_sender"><span>Eduardo Alvarez</span> ha <b class="bot_card_comment">completado</b> la tarea:</p>
+                  <p class="bot_card_comment">Enviar nuevo diseño al cliente</p>
                   <div class="bot_card_checkout">
-                    <a href="#url">CHECK IT OUT</a>
+                    <a href="#url">IR A VER</a>
                   </div>
                 </div>
               </div>
               <div class="bot_card wow fadeInUp" data-wow-delay="1.5s" data-wow-duration="1s">
-                <a href="#url" class="followbtn">Follow</a>
+                <a href="#url" class="followbtn">Seguir</a>
                 <div class="bot_card_in">
                   <h3 class="bot_card_title">Workep Bot</h3>
-                  <p class="bot_card_sender"><span>Matt from Umbrella Corp</span> has <b class="bot_card_comment">commented</b> on the task:</p>
-                  <p class="bot_card_comment">Send the new design to the client</p>
+                  <p class="bot_card_sender"><span>Matt de Umbrella Corp</span> ha <b class="bot_card_comment">comentado</b> en la tarea:</p>
+                  <p class="bot_card_comment">Enviar nuevo diseño al cliente</p>
                   <div class="bot_card_checkout">
-                    <a href="#url">CHECK IT OUT</a>
+                    <a href="#url">IR A VER</a>
                   </div>
                 </div>
               </div>
@@ -430,11 +430,11 @@
 <div class="google_contact_sec common_gap">
     <div class="container">
        <div class="section_title">
-          <h2>Google Contacts <br>Info on your contacts at a glance</h2>
+          <h2>Google Contacts <br>Información de tus contactos en un vistazo</h2>
           <div class="addon_img wow bounceInUp" data-wow-delay="0.3s" data-wow-duration="1s">
             <img src="../images/google_contact_icon.png" alt="">
           </div>
-          <p>Click on a Google contact to expand and visualize their information in Workep. <br>Phone number, email, and anything else you have on them.</p>
+          <p>Haz clic en un contacto de Google para expandirlo y visualizar toda su información en Workep. <br>Teléfono, email, y cualquier otro dato que hayas guardado previamente.</p>
         </div>
 
         <div class="google_contact_secbot">
@@ -454,11 +454,11 @@
   <div class="google_cloud_sec common_gap">
     <div class="container">
        <div class="section_title">
-          <h2>Google Cloud <br>Security and backups</h2>
+          <h2>Google Cloud <br>Seguridad y backups</h2>
           <div class="addon_img wow bounceInUp" data-wow-delay="0.3s" data-wow-duration="1s">
             <img src="../images/google_cloud.png" alt="">
           </div>
-          <p>We take the protection of your data  seriously, that's why we host your <br>data in the safest and best tool for storage and backups: G Cloud. </p>
+          <p>Nos tomamos muy en serio la protección de tus datos, por eso los alojamos<br>en la herramienta para almacenamiento y copias de seguridad más confiable: G Cloud.</p>
         </div>
         <div class="google_cloud_typing">
           <div class="google_cloud_typing_box">
@@ -473,13 +473,13 @@
 <div class="joinworkep common_gap">
     <div class="container">
       <div class="section_title">
-        <h2>Join Workep today!</h2>
+        <h2>¡Únete a Workep hoy!</h2>
       </div>
-      <p>Made the most out of your G Suite with Workep, the cross-enterprise collaboration tool, that is fast, easy to use and fully integrated within G Suite.</p>
+      <p>Saca el mayor provecho de G Suite con Workep, la herramienta de colaboración que es rápida, fácil de usar y totalmente integrada con G Suite.</p>
       <div class="joinworkep_btns">
         <ul>
-          <li><a href="https://app.workep.com/login" class="signupgoogle"><span>SIGN UP WITH GOOGLE</span></a></li>
-          <li><a href="https://gsuite.google.com/marketplace/app/workep/191121176373" class="g_suitbtn"><span>G SUITE MARKETPLACE <br/>
+          <li><a href="https://app.workep.com/login" class="signupgoogle"><span>REGÍSTRATE CON GOOGLE</span></a></li>
+          <li><a href="https://gsuite.google.com/marketplace/app/workep/191121176373" class="g_suitbtn"><span>MARKETPLACE DE G SUITE<br/>
             <span class="ratings_star"><i class="fa fa-star" aria-hidden="true"></i>
             <i class="fa fa-star" aria-hidden="true"></i>
             <i class="fa fa-star" aria-hidden="true"></i>
