--- a/es/socios.html
+++ b/es/socios.html
@@ -29,7 +29,7 @@
     <!-- FB Meta tags -->
     <meta property="og:title" content="Workep: reconstruyendo la experiencia de gestión de proyectos"/>
     <meta property="og:type" content="website"/>
-    <meta property="og:image" content="https://res.cloudinary.com/cegalvarez/image/upload/v1555274914/landingSocial../images/socialmediacover.jpg"/>
+    <meta property="og:image" content="https://res.cloudinary.com/cegalvarez/image/upload/v1555274914/landingSocial/images/socialmediacover.jpg"/>
     <meta property="og:url" content="https://workep.com"/>
     <meta property="og:description" content="Una herramienta de gestión de proyectos que es rápida, fácil de usar y totalmente integrada con G Suite"/>
 
@@ -38,7 +38,7 @@
     <meta name="twitter:site" content="@workep" />
     <meta name="twitter:title" content="Workep: reconstruyendo la experiencia de gestión de proyectos" />
     <meta name="twitter:description" content="Una herramienta de gestión de proyectos que es rápida, fácil de usar y totalmente integrada con G Suite" />
-    <meta name="twitter:image" content="https://res.cloudinary.com/cegalvarez/image/upload/v1555274914/landingSocial../images/socialmediacover.jpg" />
+    <meta name="twitter:image" content="https://res.cloudinary.com/cegalvarez/image/upload/v1555274914/landingSocial/images/socialmediacover.jpg" />
 
     <title>Programa de socios - Crece tu negocio más rápido con Workep</title>
 
@@ -107,15 +107,15 @@
     <div class="row">
       <div class="col-md-6 partner_banner_lft">
         <div class="banner_seclft">
-          <img src="images/partner_banner_im.png" alt="">
+          <img src="../images/partner_banner_im.png" alt="">
 
         </div>
       </div>
       <div class="col-md-6 partner_banner_rt">
-        <h2>Grow your business faster with Workep</h2>
-        <h4>Our mantra #MMM Make More Money!</h4>
-        <p>Improve your portfolio and G Suite adoption by offering a new Project Management tool to your existing customers. Fast, easy to use and fully integrated with G Suite.</p>
-       <a href="https://projectmanagement.workep.com/become-a-partner" class="starttrial_btn">Become a Partner</a>
+        <h2>Crece tu negocio más rápido con Workep</h2>
+        <h4>Nuestro mantra #HMD HAZ MÁS DINERO</h4>
+        <p>Mejora tu cartera y la adopción de G Suite al ofrecer a tus clientes actuales una nueva herramienta de gestión de proyectos. Rápida, fácil de usar y totalmente integrada con G Suite.</p>
+       <a href="https://projectmanagement.workep.com/become-a-partner" class="starttrial_btn">CONVIÉRTETE EN SOCIO</a>
       </div>
     </div>
   </div>
@@ -126,19 +126,19 @@
   <div class="missing_half common_gap">
       <div class="container">
         <div class="section_title">
-          <h2>The missing half of G Suite</h2>
-          <p>We enable partners to help their customers centralize their work around <br> G Suite, through training, certifications, marketing and sales benefits.</p>
+          <h2>La otra mitad de G Suite</h2>
+          <p>Habilitamos a nuestros socios para que ayuden a sus clientes a centralizar su trabajo alrededor <br> de G Suite, a través de capacitación, certificaciones, marketing y beneficios de ventas.</p>
         </div>
         <div class="missing_half_bot">
           <div class="missing_half_bgim">
-            <img src="images/missing-half.png" alt="">
+            <img src="../images/missing-half.png" alt="">
           </div>
           <div class="linebar1">
             <span class="linebar wow fadeInLeft" data-wow-duration="0.5s" data-wow-delay="0.4s"></span>
             <div class="linebar_popup wow zoomIn" data-wow-duration="0.5s" data-wow-delay="0.8s">
               <div class="linebar_popup_inner">
-                <h4>Licensing</h4>
-                <h5>Sell Workep licenses</h5>
+                <h4>Licenciamiento</h4>
+                <h5>Vender licencias de Workep</h5>
               </div>
             </div>
           </div>
@@ -147,7 +147,7 @@
             <div class="linebar_popup wow zoomIn" data-wow-duration="0.5s" data-wow-delay="1.6s">
               <div class="linebar_popup_inner">
                 <h4>Onboarding</h4>
-                <h5>Continuously train and educate customers</h5>
+                <h5>Educar y capacitar a los clientes continuamente</h5>
               </div>
             </div>
           </div>
@@ -155,14 +155,14 @@
             <span class="linebar wow fadeInLeft" data-wow-duration="0.5s" data-wow-delay="2s"></span>
             <div class="linebar_popup wow zoomIn" data-wow-duration="0.5s" data-wow-delay="2.4s">
               <div class="linebar_popup_inner">
-                <h4>On-going services</h4>
-                <h5>Project Management implementation</h5>
+                <h4>Servicios recurrentes</h4>
+                <h5>Implementación de gestión de proyectos</h5>
               </div>
             </div>
           </div>
         </div>
         <div class="missing_half_btn">
-          <a href="#url" class="signupgoogle"><span>BECOME A PARTNER</span></a>
+          <a href="#url" class="signupgoogle"><span>CONVIÉRTETE EN SOCIO</span></a>
         </div>
 
       </div>
@@ -171,40 +171,40 @@
   <div class="benefits_become_partner common_gap wow fadeInUp" data-wow-duration="1s" data-wow-delay="1s">
     <div class="container">
         <div class="section_title">
-          <h2>Benefits of becoming a Workep partner:</h2>
+          <h2>Beneficios de convertirte en un socio de Workep:</h2>
         </div>
         <div class="benefits_become_partner_bot">
           <div class="row">
             <div class="col-md-4">
               <div class="benefits_become_partner_box">
                 <figure>
-                  <img src="images/make-money.png" alt="">
+                  <img src="../images/make-money.png" alt="">
                 </figure>
                 <div class="benefits_become_partner_con">
-                  <h3>Make More Money!</h3>
-                  <p>Increase revenue by offering a new tool to your existing customers</p>
+                  <h3>¡Haz más dinero!</h3>
+                  <p>Aumenta los ingresos al ofrecer una nueva herramienta a tus clientes existentes</p>
                 </div>
               </div>
             </div>
             <div class="col-md-4">
               <div class="benefits_become_partner_box">
                 <figure>
-                  <img src="images/complete-offering.png" alt="">
+                  <img src="../images/complete-offering.png" alt="">
                 </figure>
                 <div class="benefits_become_partner_con">
-                  <h3>Complete offering</h3>
-                  <p>Help your customers implement and use Workep, and enhance their project management work</p>
+                  <h3>Oferta completa</h3>
+                  <p>Ayuda a tus clientes a implementar y usar Workep, y a mejorar la gestión de sus proyectos</p>
                 </div>
               </div>
             </div>
            <div class="col-md-4">
               <div class="benefits_become_partner_box">
                 <figure>
-                  <img src="images/training-support.png" alt="">
+                  <img src="../images/training-support.png" alt="">
                 </figure>
                 <div class="benefits_become_partner_con">
-                  <h3>Training and support</h3>
-                  <p>Become a Workep expert. Help your customers solve their day to day problems with collaboration</p>
+                  <h3>Soporte</h3>
+                  <p>Conviértete en un experto de Workep. Ayuda a tus clientes a resolver sus problemas de colaboración</p>
                 </div>
               </div>
             </div>
@@ -216,11 +216,11 @@
   <div class="real_impact common_gap">
     <div class="container">
         <div class="section_title">
-          <h2>#Real Impact</h2>
+          <h2>#Impacto real</h2>
           <ol>
-            <p>Based on our studies:</p>
-            <li>Our customers increased G Suite adoption after they started using Workep.</li>
-            <li>Higher client percentage retention rate is expected when offering adjacent G Suite solutions.</li>
+            <p>Basado en nuestros estudios:</p>
+            <li>Nuestros clientes aumentaron la adopción de G Suite al empezar a usar Workep.</li>
+            <li>Se espera una mayor tasa de retención de clientes cuando se ofrecen soluciones adyacentes a G Suite.</li>
           </ul>
         </div>
         <div class="real_impact_adoption">
@@ -229,7 +229,7 @@
               <span class="count">100</span>
             </div> -->
             <div class="col-lg-12 col-12 real_impact_adoptionR">
-              <h3>G Suite Adoption</h3>
+              <h3>Adopción de G Suite</h3>
               <div class="count_meter">
                <span class="count_blue">100</span>
               </div>
@@ -241,45 +241,45 @@
             <div class="col-md-3 col-6 wow bounceInUp" data-wow-delay="0.1s" data-wow-duration="1s">
               <div class="othercounter_box">
                 <figure>
-                  <img src="images/google_drive_ic.png" alt="Google Drive Workep" style="max-width: 70%;">
+                  <img src="../images/google_drive_ic.png" alt="Google Drive Workep" style="max-width: 70%;">
                 </figure>
                 <div class="othercounter_box_percent">
                    <span class="countnew">24</span>
                 </div>
-                <p>Google Docs creation.</p>
+                <p>Creación de Google Docs.</p>
               </div>
             </div>
             <div class="col-md-3 col-6 wow bounceInUp" data-wow-delay="0.2s" data-wow-duration="1s">
               <div class="othercounter_box">
                 <figure>
-                  <img src="images/google_calender.png" alt="Google Calendar workep" style="max-width: 62%;">
+                  <img src="../images/google_calender.png" alt="Google Calendar workep" style="max-width: 62%;">
                 </figure>
                 <div class="othercounter_box_percent">
                    <span class="countnew">90</span>
                 </div>
-                <p>Initial engagement.</p>
+                <p>Enganche inicial.</p>
               </div>
             </div>
             <div class="col-md-3 col-6 wow bounceInUp" data-wow-delay="0.3s" data-wow-duration="1s">
               <div class="othercounter_box">
                 <figure>
-                  <img src="images/gmail_addon.png" alt="gmail workep" style="max-width: 80%;">
+                  <img src="../images/gmail_addon.png" alt="gmail workep" style="max-width: 80%;">
                 </figure>
                 <div class="othercounter_box_percent">
                    <span class="countnew">24</span>
                 </div>
-                <p>Google docs creation.</p>
+                <p>Creación de Google Docs.</p>
               </div>
             </div>
             <div class="col-md-3 col-6 wow bounceInUp" data-wow-delay="0.4s" data-wow-duration="1s">
               <div class="othercounter_box">
                 <figure>
-                  <img src="images/bulb.png" alt="">
+                  <img src="../images/bulb.png" alt="">
                 </figure>
                 <div class="othercounter_box_percent">
                    <span class="countnew">90</span>
                 </div>
-                <p>Initial engagement with users.</p>
+                <p>Enganche inicial.</p>
               </div>
             </div>
           </div>
@@ -291,38 +291,38 @@
   <div class="addi_resource common_gap wow fadeInUp" data-wow-duration="1s" data-wow-delay="1s">
     <div class="container">
       <div class="section_title">
-        <h2>Additional Resources</h2>
-        <p>Learn more about the Workep Partners Program </p>
+        <h2>Recursos adicionales</h2>
+        <p>Conoce más sobre el programa de socios de Workep:</p>
       </div>
       <div class="row addi_resource_list">
         <div class="col-md-4">
           <div class="addi_resource_box">
             <figure>
-              <img src="images/addi_resource1.png" alt="">
+              <img src="../images/addi_resource1.png" alt="">
             </figure>
-            <h3>Program brochure</h3>
-            <p>Learn more about the program benefits and requirements</p>
-            <a href="#url" class="starttrial_btn starttrial_btnV2">Download</a>
+            <h3>Brochure del programa</h3>
+            <p>Conoce más sobre los beneficios <br>y los requisitos del programa</p>
+            <a href="#url" class="starttrial_btn starttrial_btnV2">Descargar</a>
           </div>
         </div>
         <div class="col-md-4">
           <div class="addi_resource_box">
             <figure>
-              <img src="images/addi_resource2.png" alt="workep partners">
+              <img src="../images/addi_resource2.png" alt="workep partners">
             </figure>
-            <h3>Program agreement</h3>
-            <p>Legal agreement under <br>the Partners Program</p>
-            <a href="https://projectmanagement.workep.com/become-a-partner" class="starttrial_btn starttrial_btnV2">Contact Sales</a>
+            <h3>Acuerdo del programa</h3>
+            <p>Acuerdo legal a firmar <br>en el programa de socios</p>
+            <a href="https://projectmanagement.workep.com/become-a-partner" class="starttrial_btn starttrial_btnV2">Descargar</a>
           </div>
         </div>
         <div class="col-md-4">
           <div class="addi_resource_box">
             <figure>
-              <img src="images/addi_resource3.png" alt="">
+              <img src="../images/addi_resource3.png" alt="">
             </figure>
-            <h3>Onboarding process</h3>
-            <p>Learn how we'll work together <br>from day 1</p>
-            <a href="#url" class="starttrial_btn starttrial_btnV2">Download</a>
+            <h3>Proceso de onboarding</h3>
+            <p>Conoce cómo vamos a trabajar<br>juntos desde el día #1</p>
+            <a href="#url" class="starttrial_btn starttrial_btnV2">Descargar</a>
           </div>
         </div>
       </div>
@@ -330,10 +330,10 @@
   </div>
   <div class="join_our_family common_gap">
     <div class="join_our_family_im">
-      <img src="images/join-our-family.png" alt="">
+      <img src="../images/join-our-family.png" alt="">
       <div class="join_our_family_con">
         <h2>Join our family today!</h2>
-        <a href="#url" class="signupgoogle"><span>BECOME A PARTNER</span></a>
+        <a href="#url" class="signupgoogle"><span>CONVIÉRTETE EN SOCIO</span></a>
       </div>
     </div>
   </div>
@@ -342,9 +342,9 @@
 
 <div class="quickstartbox">
   <div class="quickstartbox_in">
-    <h3>Quick start</h3>
-  <p>Start by downloading our Partners Program Brochure to learn more about the benefits of becoming a Workep Partner </p>
-  <a href="#url" class="downloadpdf">DOWNLOAD PDF</a>
+    <h3>Acceso rápido</h3>
+  <p>Empieza descargando el brochure del programa de socios para conocer más sobre los beneficios y requerimientos </p>
+  <a href="https://projectmanagement.workep.com/become-a-partner" class="downloadpdf">DESCARGAR PDF</a>
   </div>
 </div>
 
@@ -353,11 +353,11 @@
     <div class="container">
       <div class="foot_top_row">
         <div class="foot1">
-          <a href="https://workep.com/" class="footer_logo"><img src="../images/logo.png" alt=""></a>
+          <a href="https://workep.com/" class="footer_logo"><img src="../../images/logo.png" alt=""></a>
           <p>©2019 Workep,Inc. todos los derechos reservados<br>
             <!-- <span><a href="tel:+12010000000">+1 (510) 000-0000</a></span> -->
           </p>
-          <span class="madeby">Hecho con <i><img src="../images/heart_im.png" alt="workep made with love "></i> por Workep</span>
+          <span class="madeby">Hecho con <i><img src="../../images/heart_im.png" alt="workep made with love "></i> por Workep</span>
         </div>
         <div class="foot2">
           <h4>Producto</h4>
@@ -398,8 +398,8 @@
         <div class="foot5">
           <h4>Contacto</h4>
           <ul class="soc_link">
-             <li><a href="https://twitter.com/workep" target="_blank"><img src="../images/con_ic2.png" alt=""></a></li>
-             <li><a href="mailto:service@workep.com?Subject=Hello%20Workep%20Team!"><img src="../images/con_ic3.png" alt=""></a></li>
+             <li><a href="https://twitter.com/workep" target="_blank"><img src="../../images/con_ic2.png" alt=""></a></li>
+             <li><a href="mailto:service@workep.com?Subject=Hello%20Workep%20Team!"><img src="../../images/con_ic3.png" alt=""></a></li>
           </ul>
         </div>
       </div>
@@ -421,15 +421,15 @@
         </div>
         <div class="foot_bot_soc">
           <ul>
-            <li><a href="https://twitter.com/workep" target="_blank"><img src="../images/twit.svg" alt="workep twitter"></a></li>
-            <li><a href="https://www.facebook.com/workepapp" target="_blank"><img src="../images/fb.svg" alt="workep facebook"></a></li>
-            <li><a href="https://www.instagram.com/workepapp" target="_blank"><img src="../images/ins.svg" alt="workep instagram"></a></li>
+            <li><a href="https://twitter.com/workep" target="_blank"><img src="../../images/twit.svg" alt="workep twitter"></a></li>
+            <li><a href="https://www.facebook.com/workepapp" target="_blank"><img src="../../images/fb.svg" alt="workep facebook"></a></li>
+            <li><a href="https://www.instagram.com/workepapp" target="_blank"><img src="../../images/ins.svg" alt="workep instagram"></a></li>
           </ul>
         </div>
         <div class="app_storelink">
           <ul>
-            <li><a href="https://play.google.com/store/apps/details?id=com.workep.app"><img src="../images/google_play.png" alt="workep android"></a></li>
-            <li><a href="#url"><img src="../images/app_store.png" alt="workep iOS"></a></li>
+            <li><a href="https://play.google.com/store/apps/details?id=com.workep.app"><img src="../../images/google_play.png" alt="workep android"></a></li>
+            <li><a href="#url"><img src="../../images/app_store.png" alt="workep iOS"></a></li>
           </ul>
         </div>
       </div>
