#5 improvements in images, spanish website

--- a/es/casosdeuso.html
+++ b/es/casosdeuso.html
@@ -1312,10 +1312,11 @@ Workep is the Project Management platform that's flexible enough to adapt to eve
               <li><a href="https://workep.com/es/producto.html">Características</a></li>
               <!-- <li><a href="#url">Integrations </a></li> -->
               <!-- <li><a href="#url">Users guide </a></li> -->
-              <li><a href="https://workep.com/es/casosdeuso.html">Casos de uso </a></li>
+              <!-- <li><a href="https://workep.com/es/casosdeuso.html">Casos de uso </a></li> -->
               <li><a href="https://projectmanagement.workep.com/request-demo">Solicitar un demo </a></li>
               <li><a href="https://projectmanagement.workep.com/contact-sales">Contactar a ventas</a></li>
               <li><a href="https://workep.com/es/hechoparagoogle.html">Hecho para Google</a></li>
+              <li><a href="https://workep.com/es/workep-para-educacion.html">Workep Para Educación</a></li>
             </ul>
           </div>
           <div class="foot3">
@@ -1373,12 +1374,16 @@ Workep is the Project Management platform that's flexible enough to adapt to eve
               <li><a href="https://www.instagram.com/workepapp" target="_blank"><img src="../images/ins.svg" alt="workep instagram"></a></li>
             </ul>
           </div>
+
+          <!--
           <div class="app_storelink">
             <ul>
               <li><a href="https://play.google.com/store/apps/details?id=com.workep.app"><img src="../images/google_play.png" alt="workep android"></a></li>
               <li><a href="#url"><img src="../images/app_store.png" alt="workep iOS"></a></li>
             </ul>
           </div>
+          -->
+
         </div>
       </div>
     </div>
