--- a/index.html
+++ b/index.html
@@ -541,18 +541,18 @@ meet the different projects deadlines. </p>
               <h4 class="title_txt">#1 in the Google Marketplace</h4>
              <!--  <span class="chk_review"><a href="#url">Check our reviews</a></span> -->
               <div class="clientreview_text">
-                <p>I have been using Workep for 1 year, I really love the ﬂexibility, basically we use Workep for everything, and on every team our company! </p>
+                <p>Intuitive, flowless, and responsive. We enjoy the 3 display modes and total integrations with Google Suite calendar, Drive and Docs. We work with creatives and now we can review their work on the spot.
+                  We look forward for more tools and tweaks. Keep it up!</p>
               </div>
               <div class="client_proftxt">
                 <span class="client_profLft">
-                  <img src="images/cameron.png" alt="">
+                  <img src="images/chat_bot.png" alt="">
                 </span>
                 <span class="client_profrt">
                   <span class="client_ratings">
                     <img src="images/star.png" alt="">
                   </span>
-                  <span class="client_name">Chon Watson</span>
-                  <span class="client_desig">Project Manager at <strong>Vodafone</strong></span>
+                  <span class="client_name">Diego Cardenas</span>
                 </span>
 
               </div>
