--- a/pricing.html
+++ b/pricing.html
@@ -808,9 +808,10 @@
               Google Marketplace
             </span>
             <h4 class="title_txt">#1 in the Google Marketplace</h4>
-            <span class="chk_review"><a href="#url">Check our reviews</a></span>
+            <span class="chk_review"><a href="https://gsuite.google.com/marketplace/app/workep/191121176373">Check our reviews</a></span>
             <div class="clientreview_text">
-              <p>Workep helps us keep track of all creative work and make sure they are ready on time.</p>
+              <p>Best task management app that I ever used. Very easy to use and great pricing.
+                Love this tool and recommend for any type of organization or even for personal usage.</p>
             </div>
             <div class="client_proftxt">
               <span class="client_profLft">
@@ -821,7 +822,6 @@
                   <img src="images/star.png" alt="">
                 </span>
                 <span class="client_name">Victoria Fitzgerald</span>
-                <span class="client_desig">Director from XCompany</span>
               </span>
 
             </div>
