--- a/product.html
+++ b/product.html
@@ -128,7 +128,7 @@ and fully integrated within G Suite.</p>
         <div class="startsec_in">
           <h3>Start</h3>
           <span class="robochar">
-            <img src="images/robo.png" alt="" class="oscillation">
+            <img src="images/gen2.png" alt="" class="oscillation">
             <svg viewBox="0 0 100 20" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve" xmlns:serif="http://www.serif.com/" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:1.5;">
             <ellipse id="shadow" cx="50" cy="5" rx="30" ry="6" style="fill:#b2b2b2;"/>
             </svg>
@@ -205,7 +205,7 @@ out changes to improve your flow.</P>
                       </div>
                       <div class="col-md-4 as_flexible_as_contentR">
                         <P>Visualize your tasks scheduled
-over time, indetify bottlenecks and
+over time, identify bottlenecks and
 critical tasks that could affect the
 rest of the project..</P>
                       </div>
@@ -331,7 +331,7 @@ their success, and adapt to issues to avoid major failures.</P>
         <div class="boots_your_business_bot jwg_slider_module" id="horizontalTab2">
            <span class="boots_your_business_tag mob">
               <img src="images/prog_marketing_title_im1.png" alt="">
-              Google Marketplace
+              Workep Marketplace
             </span>
           <div class="boots_your_business_botout">
             <div class="boots_your_business_slides slides resp-tabs-container">
@@ -372,7 +372,7 @@ their success, and adapt to issues to avoid major failures.</P>
               <li><a href="#url">ROLES</a></li>
               <li><a href="#url">BUDGET TRACKER</a></li>
               <li><a href="#url">VOICE NOTES</a></li>
-              <li><a href="#url">EXTERNAL COLABORATION</a></li>
+              <li><a href="#url">EXTERNAL COLLABORATION</a></li>
 
             </ul>
 
