--- a/workep-for-education.html
+++ b/workep-for-education.html
@@ -391,7 +391,7 @@ projects by providing a platform fully integrated with Google for Education.</p>
         <h2>Are you an Educational Institution? <br>Join Workep today!</h2>
       </div>
 
-      <a href="#url" class="starttrial_btn starttrial_btnV2">Contact sales</a>
+      <a href="https://projectmanagement.workep.com/contact-sales" class="starttrial_btn starttrial_btnV2">Contact sales</a>
     </div>
   </div>
 
